--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   },
   "dependencies": {
     "@cosmjs/stargate": "^0.30.1",
+    "@ethersproject/providers": "^5.7.2",
     "@keplr-wallet/stores": "^0.11.59",
     "@keplr-wallet/types": "^0.11.59",
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
-    "@web3-react/core": "^8.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
-    "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "ethers": "^6.3.0",
     "next": "13.3.4",
@@ -29,7 +30,12 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "postcss": "^8.4.23",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.2.8",
     "tailwindcss": "^3.3.2"
   }
 }
