--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.6.1",
     "@cosmjs/stargate": "^0.30.1",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@ethersproject/providers": "^5.7.2",
     "@keplr-wallet/stores": "^0.11.59",
     "@keplr-wallet/types": "^0.11.59",
@@ -21,12 +24,13 @@
     "@web3-react/injected-connector": "^6.0.7",
     "eslint-config-next": "13.3.4",
     "ethers": "^6.3.0",
+    "framer-motion": "^10.12.8",
     "next": "13.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.4",
     "web3": "^1.9.0",
-    "zustand": "^4.3.7"
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
